update required fields for base app feature (#724)

--- a/docs/mini-apps/core-concepts/manifest.mdx
+++ b/docs/mini-apps/core-concepts/manifest.mdx
@@ -152,15 +152,15 @@ Short description under name. Max 30 chars; avoid emojis/special chars.
 Promo text for app page. Max 170 chars; avoid emojis/special chars.
 </ParamField>
 
-<ParamField path="tagline" type="string">
+<ParamField path="tagline" type="string" required>
 Marketing tagline. Max 30 chars.
 </ParamField>
 
-<ParamField path="heroImageUrl" type="string">
+<ParamField path="heroImageUrl" type="string" required>
 Large promo image. 1200×630px (1.91:1), PNG/JPG.
 </ParamField>
 
-<ParamField path="screenshotUrls" type="string[]">
+<ParamField path="screenshotUrls" type="string[]" required>
 Visual previews. Max 3; portrait 1284×2778px recommended.
 </ParamField>
 </Card>
