--- a/docs/mini-apps/featured-guidelines/overview.mdx
+++ b/docs/mini-apps/featured-guidelines/overview.mdx
@@ -19,7 +19,7 @@ Your app must meet all product, design, and technical guidelines outlined below.
 </Step>
 
 <Step title="Onboarding Flow">
-  * Explain the purpose of the app and how to get started, with clear onboarding instructions either on the home page or as a a pop-up window.
+  * Explain the purpose of the app and how to get started, with clear onboarding instructions either on the home page or as a pop-up window.
   * App only requests essential personal information, with clear context
   * Display user's avatar and username **(no 0x addresses)**
 </Step>
