--- a/docs/onchainkit/latest/components/appchain/bridge.mdx
+++ b/docs/onchainkit/latest/components/appchain/bridge.mdx
@@ -204,7 +204,7 @@ const customBridgeableTokens: BridgeableToken[] = [
 
 The `remoteToken` field represents the token address on the appchain you're bridging to.
 
-ERC-20 tokens on the appchain must comply to the `IOptimismMintableERC20` interface to be bridgeable.
+ERC-20 tokens on the appchain must comply with the `IOptimismMintableERC20` interface to be bridgeable.
 
 Follow the [Optimism documentation](https://docs.optimism.io/app-developers/tutorials/bridging/standard-bridge-standard-token#create-an-l2-erc-20-token) to retrieve the `remoteToken` address for your ERC-20 token.
 
